# cross-platform-sample

./: .gitignore  .gitmodules  README.md
.github/workflows/: merge_main.yaml  (+1 more)
cross-platform/: CMakeLists.txt
cross-platform/android/jni/: Android.mk  Application.mk  native-lib.cpp
cross-platform/ios/ios-lib/ios-lib/: ios_lib.h  ios_lib.mm
cross-platform/ios/ios-lib/ios-lib.xcodeproj/: project.pbxproj
cross-platform/shared/src/: GitHubContext.cpp  GitHubContext.hpp
cross-platform/shared/src/http/: GitHubClient.cpp  GitHubClient.hpp  HttpClient.cpp  HttpClient.hpp  Response.hpp
cross-platform/shared/src/model/: Repo.cpp  Repo.hpp  User.cpp  User.hpp
cross-platform/shared/src/sqlite/: SQLiteDatabaseConnector.cpp  SQLiteDatabaseConnector.hpp
cross-platform/shared/test/: GitHubContextTest.cc
cross-platform/shared/test/data/: api-repos-ycagri.json  api-user-not-exist.json  api-user-ycagri.json  repo-bluetooth-messenger.json
cross-platform/shared/test/http/: GitHubClientTest.cc  HttpClientTest.cc  ResponseTest.cc
cross-platform/shared/test/model/: RepoTest.cc  UserTest.cc
cross-platform/shared/test/sqlite/: SQLiteDatabaseConnectorTest.cc
cross-platform/windows/sqlite/: sqlite3.exp  sqlite3.lib
cross-platform/windows/sqlite/x64/: sqlite3.lib
cross-platform/windows/sqlite/x86/: sqlite3.lib
cross-platform/windows/windows-lib/: Directory.Build.Props  windows-lib.sln
cross-platform/windows/windows-lib/lib/: LibBridge.cpp  LibBridge.h  LibBridge.idl  lib.vcxproj  lib.vcxproj.filters  lib_TemporaryKey.pfx  packages.config  readme.txt
(+13 files in other folders)
